plugins {
    id 'com.diffplug.spotless' version '6.25.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.springframework.boot' version '3.5.10'
}

ext {
    cxfVersion = "4.1.4"
    informationSecurityAuditingLogSchemas = "2.0.1.3"
    jaxb2Version = "3.0.0"
    rivtaClinicalprocessSchemasVersion = "4.0.5.4"

    springbootMavenBomVersion = "3.5.10"
}

springBoot {
    mainClass = 'se.inera.intyg.intygmockservice.IntygMockServiceApplication'
}

allprojects {
    apply plugin: 'java'

    group = 'se.inera.intyg.intygmockservice'
    version = System.properties['buildVersion'] ?: '0.0.1-SNAPSHOT'

    repositories {
        mavenLocal()
        maven { url "https://nexus.drift.inera.se/repository/it-public/" }
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'com.diffplug.spotless'
    apply plugin: 'io.spring.dependency-management'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:${springbootMavenBomVersion}"
        }
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    compileJava {
        options.encoding = "UTF-8"
        options.compilerArgs.add("-parameters")
    }

    test {
        jvmArgs += [
                "-Xshare:off"
        ]
    }

    testing {
        suites {
            test {
                useJUnitJupiter()
            }
        }
    }

    spotless {
        java {
            googleJavaFormat()
            targetExclude('**/generated/**', '**/build/**')
            removeUnusedImports()
            endWithNewline()
            trimTrailingWhitespace()
            formatAnnotations()
        }
    }
}